--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,9 @@
       body {
         background-color: black;
         color: white;
-        width: 312px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
       button {
         background-color: #336dab;
@@ -19,7 +21,6 @@
         margin: 4px 2px;
         display: inline-block;
         transition-duration: 0.4s;
-        width: 150px;
       }
       button:hover{
         background-color: white;
@@ -30,8 +31,6 @@
   <body>
     <h2>Backlinks</h2>
     <button type="button" id="start">Start</button>
-    <button type="button" id="clear">Clear Data</button>
-    <button type="button" id="download">Download</button>
     <script src="scripts/popup.js"></script>
   </body>
 </html>
